# Pukage

./: CHANGELOG.md  LICENSE  LINKS.md  README.md  SUMMARY.md  __main__.py  changelog.md  chapter2.py  custom-level-editor.md  inventory.py  items.py  levelEditor.py  main.py  options.py  pyproject.toml  scrolltype.py  settings.py  soodo changelog  soodo code  test.py  waittype.py
.github/: .gitignore
.github/ISSUE_TEMPLATE/: typo.md
.github/issue_template/: bug_report.md  typo.md
.github/workflows/: python-app.yml
soodo/: soodo items  soodo places  soodo story
