[tool.poetry]
name = "Pukage"
version = "v1.0.0-beta"
description = "Jeff put a description here. Wouldn't it be embarrasing if people saw this?"
authors = ["Jeffry Zang <>", "Li Feng Yin <yinl8409@wrdsb.ca>", "Daniel Zhang <d.zhang200788@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
readchar = "^2.0.1"

[tool.poetry.dev-dependencies]
black = "^19.10b0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
