[tool.poetry]
name = "Pukage"
version = "v1.0.0-alpha"
description = "Indie story game made by 3 teenagers and a repl"
authors = ["Jeffrey Zang <zangj4548@wrdsb.ca>", "Li Feng Yin <yinl8409@wrdsb.ca>", "Daniel Zhang <d.zhang200788@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
readchar = "^2.0.1"

[tool.poetry.dev-dependencies]
black = "^19.10b0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
